--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,20 +2,31 @@ services:
   postgres:
     image: postgres:15-alpine
     container_name: lapcw-postgres
+    restart: always
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: password
-      POSTGRES_DB: report_db
+      POSTGRES_USER: ${POSTGRES_USER:-admin}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD:-password}
+      POSTGRES_DB: ${POSTGRES_DB:-auth_db}
     ports:
-      - "5434:5432"
+      - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+      - ./infra/db-init:/docker-entrypoint-initdb.d
     networks:
       - lapcw-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U admin -d auth_db"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 
   mongo:
     image: mongo:6.0
     container_name: lapcw-mongo
+    restart: always
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_USER:-admin}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_PASSWORD:-password}
     ports:
       - "27017:27017"
     volumes:
@@ -23,46 +34,46 @@ services:
     networks:
       - lapcw-network
 
+  rabbitmq:
+    image: rabbitmq:3-management-alpine
+    container_name: lapcw-rabbitmq
+    restart: always
+    ports:
+      - "5672:5672"   # Protocol AMQP
+      - "15672:15672" # Management UI
+    environment:
+      RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
+      RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-guest}
+    volumes:
+      - rabbitmq_data:/var/lib/rabbitmq
+    networks:
+      - lapcw-network
+    healthcheck:
+      test: ["CMD", "rabbitmq-diagnostics", "-q", "ping"]
+      interval: 30s
+      timeout: 30s
+      retries: 3
+
   minio:
     image: minio/minio
     container_name: lapcw-minio
+    restart: always
     ports:
-      - "9000:9000"
-      - "9001:9001"
+      - "9000:9000" # API Port
+      - "9001:9001" # Console UI Port
     environment:
-      MINIO_ROOT_USER: minioadmin
-      MINIO_ROOT_PASSWORD: minioadmin
+      MINIO_ROOT_USER: ${MINIO_USER:-minioadmin}
+      MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD:-minioadmin}
     command: server /data --console-address ":9001"
     volumes:
       - minio_data:/data
     networks:
       - lapcw-network
 
-  rabbitmq:
-    image: rabbitmq:3-management-alpine
-    container_name: lapcw-rabbitmq
-    ports:
-      - "5672:5672"
-      - "15672:15672"
-    networks:
-      - lapcw-network
-
-  gateway:
-    image: nginx:alpine
-    container_name: lapcw-gateway
-    ports:
-      - "8080:80"
-    volumes:
-      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-    depends_on:
-      - auth-service
-      - report-service
-    networks:
-      - lapcw-network
-
   prometheus:
     image: prom/prometheus
     container_name: lapcw-prometheus
+    restart: always
     volumes:
       - ./infra/prometheus/prometheus.yml:/etc/prometheus/prometheus.yml
     ports:
@@ -73,20 +84,16 @@ services:
   grafana:
     image: grafana/grafana
     container_name: lapcw-grafana
+    restart: always
     ports:
       - "3000:3000"
     environment:
+      - GF_SECURITY_ADMIN_USER=admin
       - GF_SECURITY_ADMIN_PASSWORD=admin
     depends_on:
       - prometheus
-    networks:
-      - lapcw-network
-
-  auth-service:
-    build: ./services/auth-service
-    environment:
-      - DB_HOST=postgres
-      - JWT_SECRET=rahasia_negara
+    volumes:
+      - grafana_data:/var/lib/grafana
     networks:
       - lapcw-network
 
@@ -97,4 +104,6 @@ networks:
 volumes:
   postgres_data:
   mongo_data:
+  rabbitmq_data:
   minio_data:
+  grafana_data:
