--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -97,6 +97,20 @@ services:
     networks:
       - lapcw-network
 
+  gateway:
+    image: nginx:alpine
+    container_name: lapcw-gateway
+    restart: always
+    ports:
+      - "80:80"
+    volumes:
+      - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+    depends_on:
+      - postgres
+      - mongo
+    networks:
+      - lapcw-network
+
 networks:
   lapcw-network:
     driver: bridge
