feat(observability): integrate prometheus and grafana monitoring
- Docker: Expose RabbitMQ metrics port (15692) for Prometheus scraping.
- Prometheus: Configure scraping job to target RabbitMQ container.
- Config: Update prometheus.yml with scraping intervals and targets.
- Docs: Verified Grafana dashboard connectivity showing active consumers and resource usage.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,7 @@ services:
     ports:
       - "5672:5672"   # Protocol AMQP
       - "15672:15672" # Management UI
+      - "15692:15692" # Prometheus Metrics
     environment:
       RABBITMQ_DEFAULT_USER: ${RABBITMQ_USER:-guest}
       RABBITMQ_DEFAULT_PASS: ${RABBITMQ_PASS:-guest}
