--- a/infra/prometheus/prometheus.yml
+++ b/infra/prometheus/prometheus.yml
@@ -1,7 +1,15 @@
 global:
-  scrape_interval: 15s
+  scrape_interval: 5s
 
 scrape_configs:
   - job_name: 'prometheus'
     static_configs:
       - targets: ['localhost:9090']
+
+  # Monitoring RabbitMQ
+  - job_name: 'rabbitmq'
+    static_configs:
+      - targets: ['lapcw-rabbitmq:15692']
+  
+  # Monitoring Backend Services
+  # TODO: implement when the backend services are ready
