feat(observability): implement grafana provisioning
- Infra: Add 'infra/grafana/provisioning' directory for IaC (Infrastructure as Code).
- Grafana: Configure automatic datasource connection to Prometheus.
- Grafana: Configure automatic dashboard loading from file.
- Grafana: Import 'RabbitMQ Overview' dashboard JSON.
- Docker: Mount provisioning volume to Grafana container.
- Fix: Ensure dashboard JSON uses raw format (with title) to prevent loading errors.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -95,6 +95,7 @@ services:
       - prometheus
     volumes:
       - grafana_data:/var/lib/grafana
+      - ./infra/grafana/provisioning:/etc/grafana/provisioning
     networks:
       - lapcw-network
 
