--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -3,6 +3,10 @@ events {
 }
 
 http {
+
+    # Rate Limit
+    limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
+
     # upstream auth_backend {
     #     server auth-service:8080; 
     # }
@@ -25,6 +29,9 @@ http {
             return 204;
         }
 
+        # Rate Limit
+        limit_req zone=mylimit burst=20 nodelay;
+
         # Routing
         # location /api/auth/ {
         #     proxy_pass http://auth_backend/;
@@ -38,6 +45,7 @@ http {
         #     proxy_set_header X-Real-IP $remote_addr;
         # }
 
+        # minio storage
         location /storage/ {
             proxy_pass http://lapcw-minio:9000/;
             proxy_set_header Host $host;
