chore(project): add TODO markers for integration and future logic
- Dispatcher: Add TODOs for notification triggers and status update callbacks.
- Dispatcher: Add markers for payload validation logic matching INTEGRATION.md.
- Dispatcher: Mark areas requiring circuit breaker, retries, and DLQ implementation.
- Nginx: Add comments to guide when to uncomment upstream blocks for Auth/Report services.
- Goal: Align codebase with the integration contract and roadmap.

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -33,10 +33,20 @@ http {
         limit_req zone=mylimit burst=20 nodelay;
 
         # Routing
+        # TODO: IMPLEMENT - uncomment when auth and report services are ready
+
+        # upstream auth_backend {
+        #     server auth-service:8080; 
+        # }
+
         # location /api/auth/ {
         #     proxy_pass http://auth_backend/;
         #     proxy_set_header Host $host;
         #     proxy_set_header X-Real-IP $remote_addr;
+        # }
+
+        # upstream report_backend {
+        #    server report-service:8080;
         # }
 
         # location /api/reports/ {
