--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -39,7 +39,7 @@ services:
     container_name: lapcw-rabbitmq
     restart: always
     ports:
-      - "5672:5672"   # Protocol AMQP
+      - "5672:5672" # Protocol AMQP
       - "15672:15672" # Management UI
       - "15692:15692" # Prometheus Metrics
     environment:
@@ -110,6 +110,54 @@ services:
     depends_on:
       - postgres
       - mongo
+    networks:
+      - lapcw-network
+
+  auth-service:
+    build:
+      context: .
+      dockerfile: services/auth-service/Dockerfile
+    container_name: lapcw-auth-service
+    restart: always
+    ports:
+      - "8081:8081"
+    environment:
+      - POSTGRES_HOST=postgres
+      - POSTGRES_USER=admin
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=auth_db
+      - POSTGRES_PORT=5432
+      - JWT_SECRET=supersecretkey
+      - PORT=8081
+    depends_on:
+      postgres:
+        condition: service_healthy
+    networks:
+      - lapcw-network
+
+  report-service:
+    build:
+      context: .
+      dockerfile: services/report-service/Dockerfile
+    container_name: lapcw-report-service
+    restart: always
+    ports:
+      - "8082:8082"
+    environment:
+      - MONGO_HOST=mongo
+      - MONGO_PORT=27017
+      - MONGO_USER=admin
+      - MONGO_PASSWORD=password
+      - RABBITMQ_HOST=rabbitmq
+      - RABBITMQ_PORT=5672
+      - RABBITMQ_USER=guest
+      - RABBITMQ_PASS=guest
+      - PORT=8082
+    depends_on:
+      mongo:
+        condition: service_started
+      rabbitmq:
+        condition: service_healthy
     networks:
       - lapcw-network
 
