feat: security improvements and feature enhancements
- Add image upload endpoint
- Implement anonymity hashing
- Enforce JWT-based RBAC
- Add input validation
- Activate API Gateway
- Add health check and metrics endpoints

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -7,13 +7,18 @@ http {
     # Rate Limit
     limit_req_zone $binary_remote_addr zone=mylimit:10m rate=10r/s;
 
-    # upstream auth_backend {
-    #     server auth-service:8080; 
-    # }
+    # Upstream Backend Services
+    upstream auth_backend {
+        server auth-service:8081;
+    }
 
-    # upstream report_backend {
-    #     server report-service:8080;
-    # }
+    upstream report_backend {
+        server report-service:8082;
+    }
+
+    upstream notification_backend {
+        server notification-service:8084;
+    }
 
     server {
         listen 80;
@@ -22,7 +27,7 @@ http {
         # CORS
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Department' always;
 
         # Preflight Request
         if ($request_method = 'OPTIONS') {
@@ -32,39 +37,71 @@ http {
         # Rate Limit
         limit_req zone=mylimit burst=20 nodelay;
 
-        # Routing
-        # TODO: IMPLEMENT - uncomment when auth and report services are ready
+        # Auth Service Routes
+        location /api/auth/ {
+            proxy_pass http://auth_backend/api/auth/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+        }
 
-        # upstream auth_backend {
-        #     server auth-service:8080; 
-        # }
+        # Report Service Routes
+        location /api/reports/ {
+            proxy_pass http://report_backend/api/reports/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Forwarded-Proto $scheme;
+            proxy_set_header Authorization $http_authorization;
+        }
 
-        # location /api/auth/ {
-        #     proxy_pass http://auth_backend/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        # }
+        # Admin Report Routes
+        location /admin/ {
+            proxy_pass http://report_backend/admin/;
+            proxy_set_header Host $host;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Department $http_x_department;
+            proxy_set_header Authorization $http_authorization;
+        }
 
-        # upstream report_backend {
-        #    server report-service:8080;
-        # }
+        # Notification Service (SSE)
+        location /notifications/ {
+            proxy_pass http://notification_backend/notifications/;
+            proxy_set_header Host $host;
+            proxy_set_header Connection '';
+            proxy_http_version 1.1;
+            chunked_transfer_encoding off;
+            proxy_buffering off;
+            proxy_cache off;
+            proxy_read_timeout 86400s;
+        }
 
-        # location /api/reports/ {
-        #     proxy_pass http://report_backend/;
-        #     proxy_set_header Host $host;
-        #     proxy_set_header X-Real-IP $remote_addr;
-        # }
-
-        # minio storage
+        # MinIO storage
         location /storage/ {
             proxy_pass http://lapcw-minio:9000/;
             proxy_set_header Host $host;
         }
 
-        # health check
+        # Health check aggregator
         location /health {
-            return 200 '{"status":"UP", "gateway":"Nginx"}';
             add_header Content-Type application/json;
+            return 200 '{
+                "status": "UP",
+                "gateway": "Nginx",
+                "backends": {
+                    "auth": "http://auth-service:8081/health",
+                    "report": "http://report-service:8082/health",
+                    "notification": "http://notification-service:8084/health"
+                }
+            }';
+        }
+
+        # Metrics aggregator
+        location /gateway/metrics {
+            stub_status on;
+            access_log off;
         }
     }
 }
