--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -27,7 +27,7 @@ http {
         # CORS
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Department' always;
 
         # Preflight Request
         if ($request_method = 'OPTIONS') {
@@ -62,6 +62,7 @@ http {
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Department $http_x_department;
             proxy_set_header Authorization $http_authorization;
         }
 
@@ -79,8 +80,8 @@ http {
 
         # MinIO storage
         location /storage/ {
-            proxy_pass http://minio:9000/;
-            proxy_set_header Host $proxy_host;
+            proxy_pass http://lapcw-minio:9000/;
+            proxy_set_header Host $host;
         }
 
         # Health check aggregator
