--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -188,6 +188,7 @@ services:
       - RABBITMQ_USER=guest
       - RABBITMQ_PASS=guest
       - NOTIFICATION_PORT=8084
+      - JWT_SECRET=supersecretkey
     depends_on:
       rabbitmq:
         condition: service_healthy
