Implement external forwarding integration

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -160,6 +160,9 @@ services:
 
       - JWT_SECRET=supersecretkey
 
+      # Forward-to-external integration (manual forwarding)
+      - FORWARD_EXTERNAL_URL=http://dispatcher-service:8085/external/forward
+
       - MINIO_ENDPOINT=lapcw-minio:9000
       - MINIO_ACCESS_KEY=${MINIO_USER:-minioadmin}
       - MINIO_SECRET_KEY=${MINIO_PASSWORD:-minioadmin}
@@ -202,12 +205,15 @@ services:
       dockerfile: services/dispatcher-service/Dockerfile
     container_name: lapcw-dispatcher-service
     restart: always
+    ports:
+      - "8085:8085"
     environment:
       - RABBITMQ_HOST=rabbitmq
       - RABBITMQ_PORT=5672
       - RABBITMQ_USER=${RABBITMQ_USER:-lapcw}
       - RABBITMQ_PASS=${RABBITMQ_PASS:-lapcw}
       - REPORT_SERVICE_URL=http://report-service:8082
+      - DISPATCHER_HTTP_PORT=8085
     depends_on:
       rabbitmq:
         condition: service_healthy
