--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -23,6 +23,20 @@ http {
     server {
         listen 80;
         server_name localhost;
+        return 301 https://$host$request_uri;
+    }
+
+    server {
+        listen 443 ssl;
+        server_name localhost;
+
+        ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
+        ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+        
+        # SSL Protocols
+        ssl_protocols TLSv1.2 TLSv1.3;
+        ssl_prefer_server_ciphers on;
+        ssl_ciphers "EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH";
 
         # CORS
         add_header 'Access-Control-Allow-Origin' '*' always;
