--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -106,8 +106,10 @@ services:
     restart: always
     ports:
       - "80:80"
+      - "443:443"
     volumes:
       - ./infra/nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./infra/nginx/certs:/etc/nginx/certs:ro
     depends_on:
       - postgres
       - mongo
