fix: resolve critical routing, auth, and SSE stability issues
Infra (Nginx):
- Remove trailing slashes in location blocks to prevent 301 redirects that strip Authorization headers.
- Fix 'Multiple CORS values' error by hiding upstream CORS headers.
- Correct Notification Service proxy path to support SSE.

Backend:
- fix(notification): Bypass middleware for SSE routes to prevent panic (missing Flush method).
- fix(report): Resolve routing conflict between wildcard report ID and admin escalation endpoints.

Frontend:
- fix(web-warga): Fix token retrieval in API client and enable authenticated SSE connection.
- fix(dashboard): Update admin API routes to match new backend routing.

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -41,7 +41,7 @@ http {
         # CORS
         add_header 'Access-Control-Allow-Origin' '*' always;
         add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, PUT, DELETE' always;
-        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type' always;
+        add_header 'Access-Control-Allow-Headers' 'Authorization, Content-Type, X-Trace-Id, X-Client-Type, X-Department' always;
 
         # Preflight Request
         if ($request_method = 'OPTIONS') {
@@ -52,8 +52,11 @@ http {
         limit_req zone=mylimit burst=20 nodelay;
 
         # Auth Service Routes
-        location /api/auth/ {
-            proxy_pass http://auth_backend/api/auth/;
+        location /api/auth {
+            proxy_pass http://auth_backend/api/auth;
+
+            proxy_hide_header Access-Control-Allow-Origin;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
@@ -61,13 +64,18 @@ http {
         }
 
         # Report Service Routes
-        location /api/reports/ {
-            proxy_pass http://report_backend/api/reports/;
+        location /api/reports {
+            proxy_pass http://report_backend/api/reports;
+            proxy_hide_header Access-Control-Allow-Origin;
+            proxy_hide_header Access-Control-Allow-Methods;
+            proxy_hide_header Access-Control-Allow-Headers;
+         
+            proxy_set_header Authorization $http_authorization;
+
             proxy_set_header Host $host;
             proxy_set_header X-Real-IP $remote_addr;
             proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
             proxy_set_header X-Forwarded-Proto $scheme;
-            proxy_set_header Authorization $http_authorization;
         }
 
         # Admin Report Routes
@@ -80,7 +88,8 @@ http {
         }
 
         # Notification Service (SSE)
-        location /notifications/ {
+        location /api/notifications/ {
+            rewrite ^/api/(.*) /$1 break;
             proxy_pass http://notification_backend/notifications/;
             proxy_set_header Host $host;
             proxy_set_header Connection '';
