Fix nginx gateway TLS cert filenames

--- a/infra/nginx/nginx.conf
+++ b/infra/nginx/nginx.conf
@@ -30,8 +30,8 @@ http {
         listen 443 ssl;
         server_name localhost;
 
-        ssl_certificate /etc/nginx/certs/nginx-selfsigned.crt;
-        ssl_certificate_key /etc/nginx/certs/nginx-selfsigned.key;
+        ssl_certificate /etc/nginx/certs/server.crt;
+        ssl_certificate_key /etc/nginx/certs/server.key;
         
         # SSL Protocols
         ssl_protocols TLSv1.2 TLSv1.3;
